update pop up inner

--- a/clothes-category.html
+++ b/clothes-category.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=nomaximum-scale=1,user-scalable=0" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://www.brandsforless.ae/static/css/main.ac408a22.chunk.css">
+    <link rel="stylesheet" href="https://www.brandsforless.ae/static/css/main.5a7c220a.chunk.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,72 +29,72 @@
                     <div class="size-categ-list">
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/t-shirts.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/t-shirts.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/casual.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/casual.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/sweaters.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/sweaters.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/polo-shirts.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/polo-shirts.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/dress-shirts.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/dress-shirts.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/jackets.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/jackets.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/pants.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/pants.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/jeans.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/jeans.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/suits-and-blazer.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/suits-and-blazer.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/sportswear.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/sportswear.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/swimwear.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/swimwear.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/sleepwear.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/sleepwear.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/underwear.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/underwear.png" />
                             </a>
                         </div>
                         <div class="categ-item">
                             <a href="#">
-                                <img src="images/shop-all.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/shop-all.png" />
                             </a>
                         </div>
                     </div>
