--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=nomaximum-scale=1,user-scalable=0" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://www.brandsforless.ae/static/css/main.ac408a22.chunk.css">
+    <link rel="stylesheet" href="https://www.brandsforless.ae/static/css/main.5a7c220a.chunk.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -80,7 +80,7 @@
                         <div class="checkbox">
                             <input type="checkbox" id="cb4" />
                             <label for="cb4">
-                                <img src="images/mobile/men.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/mobile/men.png" />
                             </label>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                         <div class="checkbox">
                             <input type="checkbox" id="cb5" />
                             <label for="cb5">
-                                <img src="images/mobile/women.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/mobile/women.png" />
                             </label>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                         <div class="checkbox">
                             <input type="checkbox" id="cb6" />
                             <label for="cb6">
-                                <img src="images/mobile/kids.png" />
+                                <img src="https://media1.brandsforless.ae/static/homepages/onboard/mobile/kids.png" />
                             </label>
                         </div>
                     </div>
