--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=nomaximum-scale=1,user-scalable=0" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://www.brandsforless.ae/static/css/main.ac408a22.chunk.css">
+    <link rel="stylesheet" href="https://www.brandsforless.ae/static/css/main.5a7c220a.chunk.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,7 +30,7 @@
                     <div class="checkbox">
                         <input type="checkbox" id="cb1" />
                         <label for="cb1">
-                            <img src="images/clothes.png" />
+                            <img src="https://media1.brandsforless.ae/static/homepages/onboard/clothes.png" />
                         </label>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                     <div class="checkbox">
                         <input type="checkbox" id="cb2" />
                         <label for="cb2">
-                            <img src="images/shoes.png" />
+                            <img src="https://media1.brandsforless.ae/static/homepages/onboard/shoes.png" />
                         </label>
                     </div>
                 </div>
